public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

:root {
  --highlight-color: #ffa013;
  --secondary-color: #884200;
  --heading-font: "Open Sans", sans-serif;;
  --body-font: "Lora", serif;
}

body {
  font-family: var(--body-font);
}

#top-header {
  display: flex;
  justify-content: space-between;
  padding: 1rem 0;
  font-family: var(--heading-font);
}

.siteName a {
  color: #000;
  text-decoration: none;
  font-size: 2rem;
  font-weight: bold;
}

#tools a {
  color: #000;
  text-decoration: none;
}

nav ul {
  display: flex;
  justify-content: space-around;
  padding: 0;
  background-color: var(--secondary-color);
  list-style: none;
  font-family: var(--heading-font);
}

nav li {
  margin: auto;
  padding: 0.5rem 0;
}

nav li a {
  padding: 0.25rem;
  color: #fff;
  text-decoration: none;
  font-size: 0.8rem;
}

nav li a:hover {
  color: var(--secondary-color);
  background-color: #fff;
}

main h1 {
  font-size: 1.5rem;
}

.delorean-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-bottom: 2rem;
}

.delorean-grid img {
  margin: auto;
  grid-column: 1/4;
  grid-row: 1/2;
  width: 100%;
  max-width: 450px;
  height: auto;
}

.delorean-grid div {
  display: inline;
  margin: 1rem auto auto 1rem;
  grid-column: 1/2;
  grid-row: 1/2;
  background-color: #ffffffaa;
  color: var(--highlight-color);
}

.delorean-grid h3 {
  margin: auto;
  font-size: 1.5rem;
  font-weight: bold;
}

.delorean-grid ul {
  margin: auto;
  padding: 0;
  list-style: none;
  font-size: 1.25rem;
}

.delorean-grid a {
  display: inline-block;
  margin: 1rem auto auto auto;
  padding: 0.5rem 1rem;
  color: #000;
  background-color: var(--highlight-color);
  text-decoration: none;
  text-align: center;
  align-self: center;
  font-size: 1rem;
  font-family: var(--heading-font);
  font-weight: bold;
  box-shadow: 1px 1px 5px 1px var(--secondary-color);
}

.reviews ul {
  padding-left: 1.5rem;
}

.reviews li {
  padding-bottom: 1rem;
  font-size: 1.2rem;
}

.upgrades-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: baseline;
  text-align: center;
  column-gap: 0.5rem;
  row-gap: 1.5rem;
}

.upgrades-image {
  height: 90px;
  background-color: var(--highlight-color);
  border: 1px solid var(--secondary-color);
  align-content: center;
}

.upgrades-grid img {
  display: block;
  margin: auto;
}

.upgrades-grid a {
  font-family: var(--heading-font);
  font-size: 1.2rem;
}

#inv-display {
  display: grid;
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
  gap: 0.5rem;
}

#inv-display li {
  border: 1px solid var(--secondary-color);
  border-radius: 1rem;
}

#inv-display li>a {
  display: block;
  margin: auto;
  padding: 0;
}

#inv-display li>a img {
  display: block;
  margin: 0 auto;
}

#inv-display div hr {
  margin: 0;
  border: none;
  border-top: 5px solid var(--secondary-color);
}

#inv-display div h2 {
  margin: 1rem 0 0 0;
  padding: 0;
  font-size: 1rem;
}

#inv-display div span {
  display: block;
  margin: 1rem 0;
  padding: 0rem;
}

#details-img {
  width: 100%;
}

#details-img img {
  display: block;
  margin: 0 auto;
  width: 100%;
  max-width: 500px;
  height: auto;
}

#details h3 {
  font-family: var(--heading-font);
}

#details ul {
  list-style: none;
}

#details li {
  padding: 1rem;
}

#details li:nth-child(odd) {
  background-color: #eee;
}

#details li span {
  font-weight: bold;
}

#details li #price {
  font-weight: bolder;
}

.form-generic {
  margin: auto;
  padding: 1rem;
  width: 100%;
  max-width: 450px;
  background-color: var(--highlight-color);
  border-radius: 0.5rem;
}

.form-generic label {
  display: block;
  padding: 0;
  font-family: var(--heading-font);
}

.form-generic input[type=text],
.form-generic input[type=email],
.form-generic input[type=password],
.form-generic select,
.form-generic textarea {
  display: block;
  margin: 0.5rem 0;
  padding: 0.5rem;
  width: 100%;
  box-sizing: border-box;
  border-radius: 5px;
  border: none;
  background-color: #fff;
}

.form-generic textarea {
  height: 100px;
}

input:focus:valid {
  background-color: #cfc;
}

input:focus:invalid {
  background-color: #fcc;
}

.form-generic input[type=submit] {
  display: block;
  margin: auto;
  padding: 0.5rem;
  width: 100px;
  border-radius: 1rem;
  border: none;
  color: #fff;
  background-color: var(--secondary-color);
  font-size: 1rem;
  cursor: pointer;
}

#password-button {
  display: block;
  margin-bottom: 0.5rem;
  padding: 0.5rem;
  width: 140px;
  background-color: var(--secondary-color);
  color: #fff;
  font-family: var(--heading-font);
  border-radius: 5px;
  text-align: center;
  cursor: pointer;
}

#loginForm p {
  margin: 0.8rem auto 0 auto;
  color: #fff;
  font-family: var(--heading-font);
  font-size: 1.2rem;
  text-align: center;
}

#loginForm p a {
  color: #fff;
}

#classificationForm input[type=submit] {
  width: 150px;
}

#updateForm input[type=submit],
#deleteForm input[type=submit],
#updatepsswrdForm input[type=submit] {
  width: 150px;
}

.form-details {
  display: block;
  margin-bottom: 0.5rem;
  font-style: italic;
}

div.links {
  margin: 0;
  padding: 0 2rem;
}

div.links a {
  display: block;
  padding: 0.1rem 0;
  font-family: var(--heading-font);
}

p.management {
  margin: 0 0 1rem 0;
}

div.management select {
  padding: 0.5rem;
  border-radius: 5px;
}

table.management {
  margin: 0.5rem auto auto 0;
}

#messages {
  margin: 0;
  padding: 0;
  font-style: italic;
}

.notice li {
  color: #f00;
  font-style: italic;
}

.kudos {
  list-style: none;
  background-color: #afa;
}

#error-message {
  padding: 1.5rem 0.5rem;
  height: 400px;
  background-color: #ffecdf;
}

#error-message h3 {
  margin: 0;
}

footer {
  margin-top: 2rem;
  font-family: var(--heading-font);
}

footer p {
  margin: auto;
  padding: 0;
  font-size: 0.9rem;
}

@media (min-width: 640px) {
  body {
    padding: 0.5rem;
    background-image: url("/images/site/small_check.jpg");
  }
  
  #wrapper {
    margin: auto auto;
    max-width: 750px;
    padding: 0.5rem;
    background-color: #fff;
    border: 5px solid var(--highlight-color);
    border-radius: 10px;
  }

  nav li a {
    padding: 0.25rem 1rem;
    font-size: 1rem;
  }

  main {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    column-gap: 1rem;
  }

  main h1 {
    grid-column: 1/3;
    font-size: 2rem;
  }

  .delorean-grid {
    grid-template-columns: repeat(3, 1fr);
    grid-column: 1/3;
  }

  .delorean-grid div {
    margin: auto 0 auto auto;
  }

  .delorean-grid h3 {
    font-size: 1.75rem;
  }
  
  .delorean-grid ul {
    font-size: 1.5rem;
  }
  
  .delorean-grid a {
    padding: 0.7rem 1.4rem;
    font-size: 1.2rem;
  }

  section h2 {
    margin-bottom: 3rem;
  }

  .reviews {
    grid-column: 2/3;
    grid-row: 3/4;
  }

  .reviews ul {
    padding-left: 1rem;
  }

  .upgrades {
    grid-column: 1/2;
    grid-row: 3/4;
  }

  .upgrades-grid a {
    font-size: 1.1rem;
  }

  #inv-display {
    grid-template-columns: repeat(3, 1fr);
    grid-column: 1/3;
  }

  #inv-display li {
    margin: 0 auto;
    padding: 0;
    width: 202px;
    overflow: hidden;
  }

  #inv-display li>a {
    height: 150px;
  }

  #inv-display>li>a img {
    border-radius: 0 0 1rem 1rem;
  }

  #details ul {
    padding: 0 0 0 1rem;
  }

  .form-generic,
  .management,
  .notice,
  #messages,
  #error-message {
    grid-column: 1/3;
  }
}

